# seed_chainer_indels

./: Cargo.toml  README.md
analysis_code/: sce_simulation_analysis.ipynb
runtime_experiments/: runtime_info.csv
src/: main.rs  main_exact.rs  main_from_file.rs  simulation_utils.rs
stress_test_theta/recov_10_theta_0.159/: recoverability.csv
stress_test_theta/recov_10_theta_0.20/: recoverability.csv
stress_test_theta/recov_10_theta_0.25/: recoverability.csv
varying_gamma_experiments/gamma_0.05/: recoverability_gamma_0.05.csv
varying_gamma_experiments/gamma_0.25/: recoverability_gamma_0.25.csv
varying_gamma_experiments/gamma_0.5/: recoverability_gamma_0.50.csv
varying_gamma_experiments/gamma_0.75/: recoverability_gamma_0.75.csv
varying_gamma_experiments/gamma_0.95/: recoverability_gamma_0.95.csv
varying_theta_experiments/recov_100_theta_0.05/: recoverability_theta_0.05.csv
varying_theta_experiments/recov_100_theta_0.1/: recoverability_theta_0.10.csv
varying_theta_experiments/recov_100_theta_0.159/: recoverability_theta_0.159.csv
