[package]
name = "basic_seed_chainer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
bio = "*"
fxhash = "*"
rayon = "*"
clap = "2.3"
statistical = "*"
rand_distr = "0.4"

[[bin]]
name = "main_from_file"
path = "src/main_from_file.rs"

[[bin]]
name = "main_exact"
path = "src/main_exact.rs"


[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
